<resources>
    <string name="app_name">Calculadora</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="symb_cln">C</string>
    <string name="symb_div">/</string>
    <string name="symb_mul">X</string>
    <string name="symb_sub">-</string>
    <string name="symb_add">+</string>
    <string name="symb_dot">.</string>
    <string name="symb_eq">=</string>



</resources>