<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/escuro1"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/expressao"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="@color/orange"
        android:gravity="end"
        android:ellipsize="start"
        android:textSize="40sp"
        android:singleLine="true"
        android:layout_marginEnd="10dp"
        />
    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="@color/orange"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:textSize="30sp"
        android:maxLines="1"
        android:ellipsize="end"
                />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">



    <TextView
        android:id="@+id/limpar"
        style="@style/Operators_Button"
        android:text="@string/symb_cln"/>
    <TextView
        android:id="@+id/divisao"
        style="@style/Operators_Button"
        android:text="@string/symb_div"/>
     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <TextView
        android:id="@+id/numero_sete"
        style="@style/Numbers_Buttons"
        android:text="@string/num_7"/>

    <TextView
        android:id="@+id/numero_oito"
        style="@style/Numbers_Buttons"
        android:text="@string/num_8"/>

    <TextView
        android:id="@+id/numero_nove"
        style="@style/Numbers_Buttons"
        android:text="@string/num_9"/>

    <TextView
        android:id="@+id/multiplicacao"
        style="@style/Operators_Button"
        android:text="@string/symb_mul"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/numero_quatro"
            style="@style/Numbers_Buttons"
            android:text="@string/num_4"/>

        <TextView
            android:id="@+id/numero_cinco"
            style="@style/Numbers_Buttons"
            android:text="@string/num_5"/>

        <TextView
            android:id="@+id/numero_seis"
            style="@style/Numbers_Buttons"
            android:text="@string/num_6"/>

        <TextView
            android:id="@+id/subtracao"
            style="@style/Operators_Button"
            android:text="@string/symb_sub"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/numero_um"
            style="@style/Numbers_Buttons"
            android:text="@string/num_1"/>
        <TextView
            android:id="@+id/numero_dois"
            style="@style/Numbers_Buttons"
            android:text="@string/num_2"/>

        <TextView
            android:id="@+id/numero_tres"
            style="@style/Numbers_Buttons"
            android:text="@string/num_3"/>

        <TextView
            android:id="@+id/adicao"
            style="@style/Operators_Button"
            android:text="@string/symb_add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/ponto"
            style="@style/Numbers_Buttons"
            android:text="@string/symb_dot"/>

        <TextView
            android:id="@+id/numero_zero"
            style="@style/Numbers_Buttons"
            android:text="@string/num_0"/>

        <ImageView
           android:id="@+id/bckspc_icn"
            style="@style/Numbers_Buttons"
            android:src="@drawable/backspace"
            android:scaleType="center"/>
        <TextView
            android:id="@+id/backspace"
            style="@style/Numbers_Buttons"
            android:text="bckSpc"/>

        <TextView
            android:id="@+id/igual"
            style="@style/Operators_Button"
            android:text="@string/symb_eq"/>
    </LinearLayout>
</LinearLayout>

